<resources>
    <string name="app_name">Batchit</string>
    <string name="password">Password</string>
    <string name="Email">Email</string>
    <string name="loginLinerHeading">Please Login to Continue</string>
    <string name="button_login">Login</string>
    <string name="newUserText">New user please Register ?</string>
    <string name="loginHeading">Batchit</string>


    ////register

    <string name="userName">Username</string>
    <string name="Register">Register</string>
    <string name="AlreadyUser">Already have an account?"</string>
    <string name="selectImage">Select Image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>